fixed footer to not overflow into the sidebar

--- a/webstyle.css
+++ b/webstyle.css
@@ -79,12 +79,12 @@
 footer {
     background-color: #333;
     color: #fff;
-    padding: 5px;
+    padding: 0px;
     text-align: center;
     position: fixed;
     bottom: 0;
-    left: 0;
-    width: 100%;
+    right: 0;
+    width: 80%;
 }
 
 .contact {
